feat: Finalizado testes unitários com Mockito e testes de integracão com DataJpaTest e banco de dados h2 em memória.
Testes unitários:
- Todos services testados com sucesso

Testes de persistência:
- Todas as queries de em todos os repositórios testados com sucesso.