@@ -1,18 +1,22 @@
 package com.densermusic.densermusic.service;
 
 import com.densermusic.densermusic.client.DeezerClient;
+import com.densermusic.densermusic.dto.CreationResultDTO;
+import com.densermusic.densermusic.dto.artistDTO.CreateArtistRequestDTO;
 import com.densermusic.densermusic.dto.artistDTO.DeezerArtistDTO;
 import com.densermusic.densermusic.dto.artistDTO.DeezerArtistSearchResponseDTO;
+import com.densermusic.densermusic.model.Artist;
 import com.densermusic.densermusic.repository.ArtistRepository;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import static org.mockito.Mockito.*;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
@@ -32,9 +36,8 @@ class ArtistServiceImplTest {
 
     @Test
     void searchArtistsByName_shouldReturnArtistList_whenSearchIsSuccessful() {
-        // padrao de teste (AAA): Arrange, Act, Assert
 
-        // 1. Arrange (preparar o cenário)
+        // 1. Arrange
         String artistName = "Queen";
 
         // crio os objetos DTO que espero que a API retorne
@@ -43,19 +46,17 @@ class ArtistServiceImplTest {
 
         DeezerArtistSearchResponseDTO mockResponse = new DeezerArtistSearchResponseDTO(List.of(artistDto1, artistDto2));
 
-        // dizendo ao dublê: "QUANDO o metodo searchArtistByName do deezerClient for chamado com "Queen"
         when(deezerClient.searchArtistByName(artistName))
-                .thenReturn(mockResponse); // "ENTAO retorne este objeto de resposta"
+                .thenReturn(mockResponse);
 
-        // 2. Act (executar a acao)
-        // chamo o metodo real da service que chamará o deezerClient
+        // Act
         List<DeezerArtistDTO> result = artistService.searchArtistsByName(artistName);
 
-        // 3. Assert (verificar o resultado)
+        // Assert
         assertNotNull(result); // o resultado nao deve ser nulo
         assertFalse(result.isEmpty()); // a lista nao deve estar vazia
         assertEquals(2, result.size()); // o tamanho da lista deve ser 2
-        assertEquals("Queen", result.get(0).name()); // o nome do artista no resultado deve ser "Queen"
+        assertEquals("Queen", result.getFirst().name()); // o nome do artista no primeiro result deve ser "Queen"
     }
 
     @Test
@@ -71,5 +72,67 @@ class ArtistServiceImplTest {
         // Assert
         assertNotNull(result);
         assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void findOrCreateArtist_shouldReturnExistingArtist_whenArtistIsAlreadyInDb() {
+
+        // Arrange
+        Long apiId = 27L;
+        CreateArtistRequestDTO request = new CreateArtistRequestDTO(apiId);
+
+        Artist existingArtist = new Artist("Pearl Jam", "pc_url", 10000, 27L);
+
+        when(artistRepository.findByApiId(apiId))
+                .thenReturn(Optional.of(existingArtist));
+
+        // Act
+        CreationResultDTO<Artist> result = artistService.findOrCreateArtist(request);
+
+        // Assert
+        assertNotNull(result); // nao pode ser nulo
+        assertFalse(result.created()); // created deve ser false
+        assertEquals("Pearl Jam", result.entity().getName());
+
+        // cliente da API nao deve ter sido chamado
+        verify(deezerClient, never()).searchArtistById(anyLong());
+        // metodo save do repositorio nao deve ter sido chamado
+        verify(artistRepository, never()).save(any(Artist.class));
+    }
+
+    @Test
+    void findOrCreateArtist_shouldCreateAndReturnNewArtist_whenArtistIsNotInDb() {
+        // Arrange
+        Long apiId = 27L;
+        CreateArtistRequestDTO request = new CreateArtistRequestDTO(apiId);
+
+        //Dto que API vai retornar
+        DeezerArtistDTO apiDto = new DeezerArtistDTO("Pearl Jam", "pic_url", apiId, 10000);
+
+
+        //Artista que o repositorio vai retornar depois de salvar
+        Artist savedArtist = new Artist("Pearl Jam","pic_url", 10000, apiId);
+
+        when(artistRepository.findByApiId(apiId))
+                .thenReturn(Optional.empty());
+
+        when(deezerClient.searchArtistById(apiId))
+                .thenReturn(apiDto);
+
+        when(artistRepository.save(any(Artist.class)))
+                .thenReturn(savedArtist);
+
+        // Act
+        CreationResultDTO<Artist> result = artistService.findOrCreateArtist(request);
+
+        assertNotNull(result); // nao pode ser nulo
+        assertTrue(result.created()); // created deve ser true
+        assertEquals("Pearl Jam", result.entity().getName());
+
+        // salva apenas 1 vez no banco
+        verify(artistRepository, times(1)).save(any(Artist.class));
+
+        // procura na api apenas 1 vez
+        verify(deezerClient, times(1)).searchArtistById(apiId);
     }
 }
